[next release]
  new date (Thanks to Jonas Scheuner, University of Bern, Switzerland, for recommending a very useful reference!)
    main/SiO2/Popova.yml
  new data (thanks to Thomas Siefke, Friedrich-Schiller-University Jena, Germany, for submitting data in yaml format!)
    main/TiO2/Siefke.yml
  new data (thanks to Niklas Lüpken, University of Münster, Germany, for suggesting data!)
    main/Si3N4/Luke.yml
  new data (thanks to Ppof. Ivan Bodurov, Plovdiv University, Bulgaria, for submitting data!)
    main/ZnO/Bodurov.yml
    main/ZrO2/Bodurov.yml
    main/TiO2/Bodurov.yml
    organic/(C5H8O2)n - poly(methyl methacrylate)/Bodurov.yml
    organic/C2H4O)n - polyvinyl alcohol/Bodurov.yml
    organic/(C3H4O2)n - polylactic acid/Bodurov.yml
  new data (thanks to Jinmu Staddon, Dennis Group, Springfield, MA, USA, for recommending data)
    other/alloys/Cu-Zn/Querry-Cu90Zn10.yml
    other/alloys/Cu-Zn/Querry-Cu85Zn15.yml
    other/alloys/Cu-Zn/Querry-Cu70Zn30.yml
    main/Al2O3/Querry-o.yml
    main/Al2O3/Querry-e.yml
    main/Al2O3/Querry.yml
    main/Fe/Querry.yml
    main/Fe2O3/Querry-o.yml
    main/Fe2O3/Querry-e.yml
    main/Fe3O4/Querry.yml
    main/Cu2O/Querry.yml
    main/ZnO/Querry.yml
    main/Cu/Querry.yml
    main/C/Querry-DixonKS2.yml
    main/C/Querry-DixonHPN2.yml
    main/C/Querry-Dixon200-10.yml
    main/C/Querry-AsburyMicro260.yml
    main/C/Querry-Dixon1102.yml
    main/C/Querry-Asbury3222.yml
    main/C/Querry-Pyrolytic.yml
    other/mixed organic/C6H4S4-C12H4N4/Querry.yml
    other/mixed organic-inorganic/Cu-C12H4N4/Querry.yml
    other/mixed organic-inorganic/Li-C12H4N4/Querry.yml
  new data
    main/Ag/Rakic-LD.yml
    main/Au/Rakic-LD.yml
    main/Cu/Rakic-LD.yml
    main/Al/Rakic-LD.yml
    main/Be/Rakic-LD.yml
    main/Cr/Rakic-LD.yml
    main/Ni/Rakic-LD.yml
    main/Pd/Rakic-LD.yml
    main/Pt/Rakic-LD.yml
    main/Ti/Rakic-LD.yml
    main/W/Rakic.yml; 
    main/CuO/Brimhall.yml
    main/Ag/Werner.yml
    main/Ag/Werner-DFT.yml