@@ -1,0 +1,320 @@
+# this file is part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: "M. R. Querry. Optical constants of minerals and other materials from the millimeter to the ultraviolet, <a href=\"http://www.dtic.mil/docs/citations/ADA192210\"><i>US Military Contractor Report</i> CRDEC-CR-88009 (1987)</a>"
+DATA:
+  - type: tabulated nk
+    data: |
+        0.2200 1.660 0.000
+        0.2400 1.709 0.000
+        0.2600 1.683 0.000
+        0.2800 1.644 0.000
+        0.3000 1.625 0.000
+        0.3200 1.614 0.000
+        0.3400 1.606 0.000
+        0.3600 1.596 0.000
+        0.3800 1.589 0.000
+        0.4000 1.583 0.000
+        0.4200 1.575 0.000
+        0.4400 1.569 0.000
+        0.4600 1.564 0.000
+        0.4800 1.559 0.000
+        0.5000 1.554 0.000
+        0.5200 1.552 0.000
+        0.5400 1.550 0.000
+        0.5600 1.547 0.000
+        0.5800 1.545 0.000
+        0.6000 1.544 0.000
+        0.6200 1.543 0.000
+        0.6400 1.542 0.000
+        0.6600 1.542 0.000
+        0.6800 1.541 0.000
+        0.7000 1.540 0.000
+        0.7200 1.540 0.000
+        0.7400 1.540 0.000
+        0.7600 1.541 0.000
+        0.7800 1.541 0.000
+        0.8000 1.542 0.000
+        0.8200 1.543 0.000
+        0.8400 1.543 0.000
+        0.8600 1.543 0.000
+        0.8800 1.542 0.000
+        0.9000 1.542 0.000
+        0.9200 1.542 0.000
+        0.9400 1.542 0.000
+        0.9600 1.542 0.000
+        0.9800 1.542 0.000
+        1.0000 1.542 0.000
+        1.0200 1.543 0.000
+        1.0400 1.543 0.000
+        1.0600 1.543 0.000
+        1.0800 1.543 0.000
+        1.1000 1.543 0.000
+        1.1200 1.543 0.000
+        1.1400 1.542 0.000
+        1.1600 1.542 0.000
+        1.1800 1.542 0.000
+        1.2000 1.542 0.000
+        1.2200 1.542 0.000
+        1.2400 1.542 0.000
+        1.2600 1.541 0.000
+        1.2800 1.541 0.000
+        1.3000 1.541 0.000
+        1.3200 1.540 0.000
+        1.3400 1.540 0.000
+        1.3600 1.540 0.000
+        1.3800 1.539 0.000
+        1.4000 1.539 0.000
+        1.4200 1.539 0.000
+        1.4400 1.539 0.000
+        1.4600 1.538 0.000
+        1.4800 1.538 0.000
+        1.5000 1.538 0.000
+        1.5200 1.538 0.000
+        1.5400 1.537 0.000
+        1.5600 1.537 0.000
+        1.5800 1.537 0.000
+        1.6000 1.537 0.000
+        1.6200 1.537 0.000
+        1.6400 1.537 0.000
+        1.6600 1.537 0.000
+        1.6800 1.536 0.000
+        1.7000 1.536 0.000
+        1.7200 1.536 0.000
+        1.7400 1.536 0.000
+        1.7600 1.536 0.000
+        1.7800 1.536 0.000
+        1.8000 1.536 0.000
+        1.8200 1.536 0.000
+        1.8400 1.536 0.000
+        1.8600 1.535 0.000
+        1.8800 1.535 0.000
+        1.9000 1.535 0.000
+        1.9200 1.535 0.000
+        1.9400 1.535 0.000
+        1.9600 1.535 0.000
+        1.9800 1.534 0.000
+        2.0000 1.534 0.000
+        2.0200 1.534 0.000
+        2.0400 1.534 0.000
+        2.0600 1.534 0.000
+        2.0800 1.534 0.000
+        2.1000 1.534 0.000
+        2.1200 1.533 0.000
+        2.1400 1.533 0.000
+        2.1600 1.533 0.000
+        2.1800 1.533 0.000
+        2.2000 1.532 0.000
+        2.2200 1.533 0.000
+        2.2400 1.533 0.000
+        2.2600 1.533 0.000
+        2.2800 1.533 0.000
+        2.3000 1.533 0.000
+        2.3200 1.533 0.000
+        2.3400 1.533 0.000
+        2.3600 1.532 0.000
+        2.3800 1.532 0.000
+        2.4000 1.532 0.000
+        2.4200 1.532 0.000
+        2.4400 1.532 0.000
+        2.4600 1.532 0.000
+        2.4800 1.532 0.000
+        2.5000 1.533 0.000
+        2.5126 1.533 0.000
+        2.5253 1.533 0.000
+        2.5381 1.533 0.000
+        2.5510 1.533 0.000
+        2.5641 1.533 0.000
+        2.5773 1.533 0.000
+        2.5907 1.533 0.000
+        2.6042 1.533 0.000
+        2.6178 1.533 0.000
+        2.6316 1.533 0.000
+        2.6455 1.533 0.000
+        2.6596 1.533 0.000
+        2.6738 1.533 0.000
+        2.6882 1.533 0.000
+        2.7027 1.533 0.000
+        2.7174 1.533 0.000
+        2.7322 1.533 0.000
+        2.7473 1.533 0.000
+        2.7624 1.533 0.000
+        2.7778 1.534 0.000
+        2.7933 1.534 0.000
+        2.8090 1.534 0.000
+        2.8249 1.534 0.000
+        2.8409 1.534 0.000
+        2.8571 1.534 0.000
+        2.8736 1.534 0.000
+        2.8902 1.534 0.000
+        2.9070 1.534 0.000
+        2.9240 1.534 0.000
+        2.9412 1.534 0.000
+        2.9586 1.534 0.000
+        2.9762 1.534 0.000
+        2.9940 1.534 0.000
+        3.0120 1.534 0.000
+        3.0303 1.534 0.000
+        3.0488 1.534 0.000
+        3.0675 1.534 0.000
+        3.0864 1.534 0.000
+        3.1056 1.534 0.000
+        3.1250 1.534 0.000
+        3.1447 1.534 0.000
+        3.1646 1.534 0.000
+        3.1847 1.534 0.000
+        3.2051 1.533 0.000
+        3.2258 1.533 0.000
+        3.2468 1.533 0.000
+        3.2680 1.533 0.000
+        3.2895 1.533 0.000
+        3.3113 1.532 0.000
+        3.3333 1.532 0.000
+        3.3557 1.532 0.000
+        3.3784 1.532 0.000
+        3.4014 1.532 0.000
+        3.4247 1.532 0.000
+        3.4483 1.531 0.000
+        3.4722 1.531 0.000
+        3.4965 1.531 0.000
+        3.5211 1.531 0.000
+        3.5461 1.531 0.000
+        3.5714 1.531 0.000
+        3.5971 1.530 0.000
+        3.6232 1.530 0.000
+        3.6496 1.530 0.000
+        3.6765 1.530 0.000
+        3.7037 1.530 0.000
+        3.7313 1.530 0.000
+        3.7594 1.530 0.000
+        3.7879 1.530 0.000
+        3.8168 1.530 0.000
+        3.8462 1.529 0.000
+        3.8760 1.529 0.000
+        3.9063 1.529 0.000
+        3.9370 1.529 0.000
+        3.9683 1.529 0.000
+        4.0000 1.529 0.000
+        4.0323 1.529 0.000
+        4.0650 1.529 0.000
+        4.0984 1.529 0.000
+        4.1322 1.529 0.000
+        4.1667 1.529 0.000
+        4.2017 1.528 0.000
+        4.2373 1.528 0.000
+        4.2735 1.528 0.000
+        4.3103 1.528 0.000
+        4.3478 1.527 0.000
+        4.3860 1.527 0.000
+        4.4248 1.527 0.000
+        4.4643 1.527 0.000
+        4.5045 1.527 0.000
+        4.5455 1.526 0.000
+        4.5872 1.526 0.000
+        4.6296 1.526 0.000
+        4.6729 1.526 0.000
+        4.7170 1.525 0.000
+        4.7619 1.525 0.000
+        4.8077 1.525 0.000
+        4.8544 1.524 0.000
+        4.9020 1.524 0.000
+        4.9505 1.524 0.000
+        5.0000 1.524 0.000
+        5.0505 1.523 0.000
+        5.1020 1.523 0.000
+        5.1546 1.523 0.000
+        5.2083 1.522 0.000
+        5.2632 1.522 0.000
+        5.3191 1.522 0.000
+        5.3763 1.521 0.000
+        5.4348 1.521 0.000
+        5.4945 1.521 0.000
+        5.5556 1.521 0.000
+        5.6180 1.520 0.000
+        5.6818 1.520 0.000
+        5.7471 1.520 0.000
+        5.8140 1.519 0.000
+        5.8824 1.519 0.000
+        5.9524 1.519 0.000
+        6.0241 1.519 0.000
+        6.0976 1.518 0.000
+        6.1728 1.518 0.000
+        6.2500 1.518 0.000
+        6.3291 1.517 0.000
+        6.4103 1.517 0.000
+        6.4935 1.517 0.000
+        6.5789 1.516 0.000
+        6.6667 1.516 0.000
+        6.7568 1.516 0.000
+        6.8493 1.516 0.000
+        6.9444 1.515 0.000
+        7.0423 1.515 0.000
+        7.1429 1.514 0.000
+        7.2464 1.514 0.000
+        7.3529 1.514 0.000
+        7.4627 1.513 0.000
+        7.5758 1.513 0.000
+        7.6923 1.512 0.000
+        7.8125 1.512 0.000
+        7.9365 1.511 0.000
+        8.0645 1.511 0.000
+        8.1967 1.510 0.000
+        8.3333 1.510 0.000
+        8.4746 1.509 0.000
+        8.6207 1.509 0.000
+        8.7719 1.508 0.000
+        8.9286 1.507 0.000
+        9.0909 1.506 0.000
+        9.2593 1.505 0.000
+        9.4340 1.504 0.000
+        9.6154 1.503 0.000
+        9.8039 1.501 0.000
+        10.0000 1.500 0.000
+        10.2041 1.498 0.000
+        10.4167 1.497 0.000
+        10.6383 1.495 0.000
+        10.8696 1.493 0.000
+        11.1111 1.490 0.000
+        11.3636 1.488 0.000
+        11.6279 1.486 0.000
+        11.9048 1.483 0.000
+        12.1951 1.480 0.000
+        12.5000 1.478 0.000
+        12.8205 1.474 0.000
+        13.1579 1.471 0.000
+        13.5135 1.468 0.000
+        13.8889 1.464 0.000
+        14.2857 1.460 0.000
+        14.7059 1.455 0.000
+        15.1515 1.451 0.000
+        15.6250 1.446 0.000
+        16.1290 1.441 0.000
+        16.6667 1.435 0.000
+        17.2414 1.428 0.000
+        17.8571 1.417 0.001
+        18.5185 1.406 0.003
+        19.2308 1.396 0.006
+        20.0000 1.386 0.005
+        20.8333 1.371 0.004
+        21.7391 1.352 0.003
+        22.7273 1.330 0.002
+        23.8095 1.302 0.003
+        25.0000 1.263 0.003
+        26.3158 1.226 0.014
+        27.7778 1.171 0.011
+        29.4118 1.093 0.031
+        31.2500 1.001 0.049
+        33.3333 0.866 0.102
+        35.7143 0.677 0.172
+        38.4615 0.480 0.617
+        41.6667 0.497 0.792
+        45.4545 0.265 1.147
+        50.0000 0.192 1.970
+        55.5556 0.431 3.582
+        62.5000 6.293 1.948
+        71.4286 3.662 0.226
+        83.3333 3.047 0.095
+        100.0000 2.756 0.077
+        125.0000 2.585 0.071
+        166.6667 2.493 0.056
