@@ -1,0 +1,59 @@
+# this file is part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: "1) J. Pflüger, J. Fink, W. Weber, K. P. Bohnen,  G. Crecelius. Dielectric properties of TiC<sub>x</sub>, TiN<sub>x</sub>, VC<sub>x</sub>, and VN<sub>x</sub> from 1.5 to 40 eV determined by electron-energy-loss spectroscopy, <a href=\"https://doi.org/10.1103/PhysRevB.30.1155\"><i>Phys. Rev. B</i> <b>30</b>, 1155-1163 (1984)</a><br>2) Handbook of Optical Constants of Solids, Edward D. Palik, ed. Academic Press, Boston, 1985<br> (ref. 2 provides numerical values for the graphical data reported in ref. 1)"
+COMMENTS: "Room temperature"
+DATA:
+  - type: tabulated nk
+    data: |
+        0.0311 8.40E-01 5.05E-02
+        0.0318 8.31E-01 6.49E-02
+        0.0326 8.34E-01 7.31E-02
+        0.0335 8.31E-01 7.03E-02
+        0.0344 8.15E-01 7.07E-02
+        0.0354 8.01E-01 7.39E-02
+        0.0365 7.81E-01 7.67E-02
+        0.0376 7.60E-01 8.63E-02
+        0.0387 7.37E-01 1.02E-01
+        0.0400 7.15E-01 1.24E-01
+        0.0413 6.98E-01 1.48E-01
+        0.0428 6.81E-01 1.72E-01
+        0.0443 6.58E-01 2.00E-01
+        0.0459 6.33E-01 2.31E-01
+        0.0477 6.02E-01 2.78E-01
+        0.0496 5.83E-01 3.48E-01
+        0.0517 5.89E-01 4.31E-01
+        0.0539 6.28E-01 4.97E-01
+        0.0564 6.67E-01 5.45E-01
+        0.0590 7.02E-01 5.87E-01
+        0.0620 7.49E-01 6.22E-01
+        0.0653 7.93E-01 6.27E-01
+        0.0689 8.11E-01 6.28E-01
+        0.0729 7.91E-01 6.34E-01
+        0.0775 7.47E-01 6.89E-01
+        0.0827 7.59E-01 7.95E-01
+        0.0886 7.93E-01 8.74E-01
+        0.0954 8.60E-01 9.48E-01
+        0.1033 8.55E-01 9.76E-01
+        0.1127 8.23E-01 1.17E+00
+        0.1240 1.00E+00 1.38E+00
+        0.1305 1.09E+00 1.43E+00
+        0.1378 1.19E+00 1.49E+00
+        0.1459 1.28E+00 1.49E+00
+        0.1550 1.38E+00 1.53E+00
+        0.1653 1.46E+00 1.58E+00
+        0.1771 1.55E+00 1.64E+00
+        0.1907 1.69E+00 1.66E+00
+        0.2066 1.85E+00 1.71E+00
+        0.2254 2.06E+00 1.64E+00
+        0.2480 2.25E+00 1.54E+00
+        0.2755 2.31E+00 1.38E+00
+        0.3100 2.27E+00 1.23E+00
+        0.3542 2.14E+00 1.06E+00
+        0.4133 1.74E+00 1.04E+00
+        0.4959 1.20E+00 1.65E+00
+        0.6199 1.32E+00 2.69E+00
+        0.8266 1.82E+00 3.81E+00
+        1.2399 2.69E+00 5.04E+00
+        2.4797 4.52E+00 8.25E+00
